...
        android:background="@drawable/back14"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_anchor="@+id/linearLayout2"
        app:layout_anchorGravity="center">

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
...
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorHint="?android:attr/textColorHint"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/common_google_signin_btn_text_dark_focused" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:ems="10"
...
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimaryDark"
            android:textCursorDrawable="@color/common_google_signin_btn_text_dark_focused"
            android:visibility="visible" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:text="войти"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
