<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LessonAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="173dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back11">

            <Button
                android:id="@+id/dateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFFFF"
                android:onClick="setDate"
                android:text="Button"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/setTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateEdit"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFFFF"
                android:onClick="setTime"
                android:text="Button"
                android:textColorHint="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/setSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setTime"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFFFF"
                android:onClick="ShowSubjectChoice"
                android:text="Выбрать предмет" />

            <Button
                android:id="@+id/setLecturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setSubject"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="#FFFFFFFF"
                android:onClick="ShowLecturerChoice"
                android:text="Выбрать преподавателя"
                android:textColor="#000000" />

            <Button
                android:id="@+id/setAttendance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setLecturer"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorPrimary"
                android:drawableLeft="@android:drawable/stat_sys_data_bluetooth"
                android:onClick="ShowStudentChoice"
                android:paddingStart="10dp"
                android:text="Отметить студентов"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/setAttendance"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@color/colorPrimaryDark"
                android:onClick="saveLesson"
                android:text="сохранить"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="15dp"
                android:background="#00FFFFFF"
                android:onClick="onCancelClick"
                android:text="отмена"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>