<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowLessons">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#00FFFFFF"
            android:onClick="setDate"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="26dp"
            android:background="@color/colorPrimary"
            android:onClick="addLesson"
            android:text="добавить занятие"
            android:textColor="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lessonRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/date"
            android:layout_marginBottom="50dp"
            android:background="@drawable/back11"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <ProgressBar
            android:id="@+id/pb3"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>