<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.a.attendancereportpsu.MainActivity">

    <item
        android:id="@+id/update"
        android:title="Обновить из облака" />
    <item
        android:id="@+id/action_report"
        android:orderInCategory="100"
        android:title="Создать отчет"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="Выход"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_admin"
        android:title="Администрирование" />
</menu>
